# sipmWheel

./: CMakeLists.txt  README.md  main.cxx
config/: WheelConfigurationChacterization.txt  WheelConfigurationReco.txt  WheelConfigurationSimulate.txt
eventDisplay/: EventDisplay.C  FileReader.h  README.md  TPCEvent.h  gui.h
include/: Analyzer.h  Characterizer.h  ConfigReader.h  FileReader.h  LogLikelihoodCalculator.h  LogLikelihoodFunction.h  Reconstructor.h  Simulator.h  Utilities.h  WaveformAlg.h
include/old/: AnalyzerNewer.txt  Reconstructor.txt
notes/: Simulator.txt  bugs.txt
src/: Analyzer.cxx  AnalyzerNewer.txt  Characterizer.cxx  ConfigReader.cxx  FileReader.cxx  LogLikelihoodCalculator.cxx  LogLikelihoodFunction.txt  Reconstructor.cxx  Reconstructor.txt  Simulator.cxx  WaveformAlg.cxx  notes.txt
src/old/: AnalyzerOld.txt  TotalNRMethod.txt  notes.txt
